--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "autostrip-json-comments",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Installs nodejs require hook to strip JSON comments",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/gt test/*.js"
   },
   "keywords": [
     "json",
@@ -17,5 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "strip-json-comments": "~0.1.1"
+  },
+  "devDependencies": {
+    "gt": "~0.8.20"
   }
 }
