--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "nodejs",
     "require"
   ],
-  "pre-commit": "npm test",
+  "pre-commit": ["grunt", "npm test"],
   "pre-push": [
     "rm -rf node_modules",
     "npm install",
@@ -26,6 +26,13 @@
   },
   "devDependencies": {
     "gt": "~0.8.20",
-    "pre-git": "0.0.13"
+    "pre-git": "0.0.13",
+    "matchdep": "~0.3.0",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt": "~0.4.1",
+    "grunt-readme": "~0.3.0",
+    "time-grunt": "~0.2.1",
+    "jshint-stylish": "~0.1.3",
+    "grunt-nice-package": "~0.1.5"
   }
 }
