--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:uTest/autostrip-json-comments.git"
+    "url": "https://github.com/uTest/autostrip-json-comments.git"
   },
   "author": "Gleb Bahmutov <gleb.bahmutov@utest.com>",
   "license": "MIT",
